  - Removed all support for SWIG.

- Module system
  - The compiler has been modularised, for improved namespacing.  This
    means names from the compiler should not leak out into the compiled
    program's (macro) namespace anymore.
  - The core units have been converted to modules under the "chicken"
    namespace.
  - Added support for list-style library names.

4.10.2

- Security fixes
  - Specialisation rules for string-{ref,set!}, bit-set?
    and move-memory no longer use unchecked C functions which could
    result in undefined behaviour, including buffer overruns (#1216).

- Platform support
  - CHICKEN now supports the Linux X32 ABI (thanks to Sven Hartrumpf).

- Runtime system:
  - Delivery of signals in other OS-level threads is now dealt with
    in a more robust way (#1232) (thanks to Joerg Wittenberger).
  - Compiled programs with large literals won't crash on startup (#1221).
  - Comparisons of closures now behave in a stable way, whether or not
    the code was compiled with the -no-lambda-info option (#1041).

- Compiler:
  - Specializations on implicit "or" types like "number" or "boolean" now
    work, removing the requirement for the inferred types to match
    declared types exactly.  Specializations are matched from first to
    last to resolve ambiguities (#1214).
  - Compiler rewrites for char{<,>,<=,>=,=}? are now safe (#1122).
  - When requesting to emit import libraries that don't exist, the
     compiler now gives an error instead of quietly continuing (#1188).
  - Don't silently truncate huge literals (thanks to Claude Marinier).

- Core libraries
  - SRFI-18: thread-join! no longer gives an error when passed a
    thread in the "sleeping" state (thanks to Joerg Wittenberger)
  - SRFI-18: mutex-lock! will not set ownership of mutexes when
    passed #f as the owner (#1231), not disown a mutex from owner if
    locking fails for timeout and not keep the last thread which held