@@ -30,6 +30,10 @@
     namespace.
   - Added support for list-style library names.
 
+- Syntax expander
+  - Removed support for (define-syntax (foo e r c) ...) inside lambdas,
+    which was undocumented and not officially supported anyway.
+
 4.10.2
 
 - Security fixes
